[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkdocs_puml"
version = "2.2.0"
description = "Package that brings PlantUML to MkDocs"
authors = [
    "Mikhail Kravets <michkravets@gmail.com>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MikhailKravets/mkdocs_puml"
repository = "https://github.com/MikhailKravets/mkdocs_puml"
documentation = "https://mikhailkravets.github.io/mkdocs_puml/"
keywords = ["markdown", "mkdocs", "plantuml", "puml", "diagram"]
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27"
markdown = "^3.2"
mkdocs = "^1.4"
msgpack = "^1.1"
rich = "^13.9"

[tool.poetry.plusing."mkdocs.plugins"]
plantuml = "mkdocs_puml.plugin:PlantUMLPlugin"
