[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkdocs_puml"
version = "2.3.0"
description = "Package that brings PlantUML to MkDocs"
authors = ["Mikhail Kravets <michkravets@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MikhailKravets/mkdocs_puml"
repository = "https://github.com/MikhailKravets/mkdocs_puml"
documentation = "https://mikhailkravets.github.io/mkdocs_puml/"
keywords = [
    "markdown",
    "mkdocs",
    "plantuml",
    "puml",
    "uml",
    "documentation",
    "diagram",
    "uml-diagrams",
    "plugin",
    "mkdocs-plugin",
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Framework :: MkDocs",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[tool.poetry.plugins."mkdocs.plugins"]
plantuml = "mkdocs_puml.plugin:PlantUMLPlugin"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27"
markdown = "^3.2"
mkdocs = "^1.4"
msgpack = "^1.1"
rich = "^13.9"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "*"
mkdocs-awesome-pages-plugin = "*"
pytest = "*"
pytest-cov = "*"
flake8 = "*"
pre-commit = "*"
importlib-metadata = { version = ">=8.5", markers = "python_version < '3.10'" }
zipp = { version = ">=3.20", markers = "python_version < '3.10'" }
exceptiongroup = { version = ">=1.2", markers = "python_version < '3.11'" }
tomli = { version = ">=2.0", markers = "python_version < '3.11'" }
typing-extensions = { version = ">=4.12.2", markers = "python_version < '3.11'" }
pytest-httpx = "*"
